Fix menu overlaping on Firefox

--- a/media/main.css
+++ b/media/main.css
@@ -75,10 +75,10 @@ a:focus { transition: all 0.3s }
 #language_changer { position: absolute; right: 0px; }
 #language { border: 0; color: white; text-transform: uppercase; font-size: 11px; text-align: right; float: right; padding: 15px }
 #language_menu {
-	visibility: hidden; opacity: 0; clear: both; text-align: right; background-color: white; border-radius: 0px; pointer-events: none;
+	visibility: hidden; opacity: 0; clear: both; text-align: right; background-color: white; border-radius: 0px; pointer-events: none; max-height: 0px;
 	border: none; box-shadow: 0px 5px 10px rgba(0,0,0,0.2); margin-top: 27px; transition: all 0.3s; margin-right: 10px;; transform: translateY(-10px);
 }
-.opened #language_menu { visibility: visible; opacity: 1; pointer-events: all; transform: translateY(0); }
+.opened #language_menu { visibility: visible; opacity: 1; pointer-events: all; transform: translateY(0); max-height: 1000px; }
 #language_menu a { display: block; padding: 10px 20px; border: none; color: black }
 #language_menu a:hover { background-color: #EEE }
 
